first section is done

--- a/index.html
+++ b/index.html
@@ -77,15 +77,17 @@
             </div>
         </div>
     </section>
-    <section class="creation">
+    <!-- <section class="creation">
         <div class="container">
             <div class="container__col-left">
                 <div class="graphic">
-                    <img src="./img/stone.png" alt="">
+                    <div class="graphic__container">
+                        <img src="./img/stone.png" alt="graphic" class="graphic__img">
+                    </div>
                 </div>
             </div>
             <div class="container__col-right"></div>
         </div>
-    </section>
+    </section> -->
 </body>
 </html>
