second section is done

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="creation">
+    <section class="creation">
         <div class="container">
             <div class="container__col-left">
                 <div class="graphic">
@@ -86,8 +86,44 @@
                     </div>
                 </div>
             </div>
-            <div class="container__col-right"></div>
+            <div class="container__col-right">
+                <h2 class="periods__block-header">Этапы создания сайта в нашей компании</h2>
+                <div class="periods">
+                    <div class="periods__block">
+                        <div class="periods__header">Начальный этап</div>
+                        <div class="period__text">Мы выявляем первичные потребности клиента, обсуждаем пожелания, знакомимся детальнее с бизнесом и нишей, определяем цель и ставим задачи. </div>
+                    </div>
+                    <div class="periods__block">
+                        <div class="periods__header">Оценка проекта</div>
+                        <div class="period__text">Отдел разработки оценивает сложность разработки проекта, проводит анализ и аудит ниши, конкурентов, рассчитывает стоимость и сроки разработки.</div>
+                    </div>
+                    <div class="periods__block">
+                        <div class="periods__header">Прототипирование</div>
+                        <div class="period__text">Готовим структуру проекта, прототипы всех страниц, обрабатываем различные пользовательские сценарии, выявляем ошибки.</div>
+                    </div>
+                    <div class="periods__block">
+                        <div class="periods__header">Техническое задание</div>
+                        <div class="period__text">Техническое задание поможет составить чёткое представление о том, как должен функционировать будущий проект.</div>
+                    </div>
+                    <div class="periods__block">
+                        <div class="periods__header">Дизайн ui/ux</div>
+                        <div class="period__text">Теперь проектировщик делает макет, после чего начинается разработка дизайна UI/UX-дизайнером. Дизайн также проходит этап согласования.</div>
+                    </div>
+                    <div class="periods__block">
+                        <div class="periods__header">Вёрстка макета</div>
+                        <div class="period__text">Далее к работе приступает верстальщик. Он переносит весь дизайн на html-код, создаёт шаблоны уникальных страниц.</div>
+                    </div>
+                    <div class="periods__block">
+                        <div class="periods__header">Кодинг</div>
+                        <div class="period__text">Программист внедряет html шаблон в систему управления, настраивает все нужные модули, формы обратной связи, весь интерактив элементов.</div>
+                    </div>
+                    <div class="periods__block">
+                        <div class="periods__header">Тестирование</div>
+                        <div class="period__text">После создания мы тестируем проект на наличие ошибок, багов, устраняем недочёты. Далее SEO-специалист проводит оптимизацию, дополняет страницы метаданными, устанавливает системы аналитики, настраивает цели.</div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section> -->
+    </section>
 </body>
 </html>
