min tarif section is done

--- a/index.html
+++ b/index.html
@@ -125,5 +125,41 @@
             </div>
         </div>
     </section>
+    <section class="min">
+        <div class="min__container">
+            <h2 class="min__container-header">Что входит в минимальный пакет на создание сайта</h2>
+            <p class="block__text block__text-width">Недобросовестные подрядчики включают перве 5-6 пунктов в минимальный пакет по созданию. Нашей целью является не создание сайта ради сайта, а создание инструмента для бизнеса, который будет отвечать потребностям клиента на все 100%</p>
+            <div class="min-blocks">
+                <ul class="min-blocks__list">
+                    <li class="min-blocks__item">Проектирование, разработка технического задания для дальнейшего программирования.</li>
+                    <li class="min-blocks__item">Уникальная концепция дизайна в соответствии с фирменным стилем компании.</li>
+                    <li class="min-blocks__item">Дизайн внутренних страниц и подбор соответствующей графики, пиктограмм, инфографики, иллюстраций.</li>
+                    <li class="min-blocks__item">Программирование и полная настройка всех нужных компонентов.</li>
+                    <li class="min-blocks__item">Вёрстка макетов страниц по требованиям HTML5, JavaScript, CSS3, Ajax, jQuery.</li>
+                </ul>
+                <ul class="min-blocks__list">
+                    <li class="min-blocks__item">Тестирование, отладка на нашем сервере.</li>
+                    <li class="min-blocks__item">Формы обратной связи.</li>
+                    <li class="min-blocks__item">Форма отзывов.</li>
+                    <li class="min-blocks__item">Схема проезда.</li>
+                    <li class="min-blocks__item">Кнопки социальных сетей.</li>
+                    <li class="min-blocks__item">Адаптивная вёрстка.</li>
+                    <li class="min-blocks__item">Корпоративная почта (info@vashdomen.ru).</li>
+                    <li class="min-blocks__item">Базовая SEO-оптимизация.</li>
+                    <li class="min-blocks__item">Настройка, установка систем аналитики посещений пользователями.</li>
+                </ul>
+                <ul class="min-blocks__list">
+                    <li class="min-blocks__item">Защита от спама и взлома.</li>
+                    <li class="min-blocks__item">Удобная административная панель для управления контентом.</li>
+                    <li class="min-blocks__item">Кроссбраузерность.</li>
+                    <li class="min-blocks__item">Кеширование данных.</li>
+                    <li class="min-blocks__item">Настройка пользователей (администратор, редактор и другие лица).</li>
+                    <li class="min-blocks__item">Интеграция с 1С.</li>
+                    <li class="min-blocks__item">Техническая поддержка.</li>
+                    <li class="min-blocks__item">Гарантия работоспособности.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
